--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
                 iusto quibusdam, sunt neque nulla unde ipsum dolores nobis enim quidem excepturi, illum quos!
               </p>
               <ul class="text-light d-flex list-unstyled text-center">
-                <li class="list-item"> <svg class="svg-inline--fa fa-tag mx-2 text-info" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="tag" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" data-fa-i2svg=""><path fill="currentColor" d="M0 80V229.5c0 17 6.7 33.3 18.7 45.3l176 176c25 25 65.5 25 90.5 0L418.7 317.3c25-25 25-65.5 0-90.5l-176-176c-12-12-28.3-18.7-45.3-18.7H48C21.5 32 0 53.5 0 80zm112 32a32 32 0 1 1 0 64 32 32 0 1 1 0-64z"></path></svg><!-- <i class="fas fa-tag mx-2 text-info"></i> Font Awesome fontawesome.com -->animal</li>
+                <li class="list-item"> <svg class="svg-inline--fa fa-tag mx-2 text-info" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="tag" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" data-fa-i2svg=""><path fill="currentColor" d="M0 80V229.5c0 17 6.7 33.3 18.7 45.3l176 176c25 25 65.5 25 90.5 0L418.7 317.3c25-25 25-65.5 0-90.5l-176-176c-12-12-28.3-18.7-45.3-18.7H48C21.5 32 0 53.5 0 80zm112 32a32 32 0 1 1 0 64 32 32 0 1 1 0-64z"></path></svg><!-- <i class="fas fa-tag mx-2 text-info"></i> Font Awesome fontawesome.com -->eye shadow</li>
                 <li class="list-item"> <svg class="svg-inline--fa fa-clock mx-2 text-success" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="clock" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg=""><path fill="currentColor" d="M256 0a256 256 0 1 1 0 512A256 256 0 1 1 256 0zM232 120V256c0 8 4 15.5 10.7 20l96 64c11 7.4 25.9 4.4 33.3-6.7s4.4-25.9-6.7-33.3L280 243.2V120c0-13.3-10.7-24-24-24s-24 10.7-24 24z"></path></svg><!-- <i class="fas fa-clock mx-2 text-success"></i> Font Awesome fontawesome.com --> 55 min</li>
                 <li class="list-item"> <svg class="svg-inline--fa fa-play mx-2 text-danger" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="play" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512" data-fa-i2svg=""><path fill="currentColor" d="M73 39c-14.8-9.1-33.4-9.4-48.5-.9S0 62.6 0 80V432c0 17.4 9.4 33.4 24.5 41.9s33.7 8.1 48.5-.9L361 297c14.3-8.7 23-24.2 23-41s-8.7-32.2-23-41L73 39z"></path></svg><!-- <i class="fas fa-play mx-2 text-danger "></i> Font Awesome fontawesome.com --> watch video </li>
               </ul>
@@ -553,7 +553,7 @@
       </div>
     </div>
     <hr class="border-top border-3 border-light my-3">
-    <span class="text-center d-block title container px-5">Copyright © 2023 Ahmed Reda Salama , Animalhub. All rights</span>
+    <span class="text-center d-block title container px-5">Copyright © 2023 Rawda saleh All rights</span>
     <hr class="border-top border-3 border-light ">
     <!-- /footer -->
             
