--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       </div>
         <!-- end navbar -->
         <!-- start carousel -->
-    <div id="carouselExampleCaptions" class="carousel slide " data-bs-ride="carousel" style="height: 90vh;">
+    <div id="carouselExampleCaptions" class="carousel slide container " data-bs-ride="carousel" style="height: 60vh;">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
