--- a/index.html
+++ b/index.html
@@ -254,10 +254,10 @@
   <div class="fixed-img img-fluid mt-3">
   </div>
   <!-- //////////////// -->
-  <div class="container container-1 my-4 ">
+  <div class="container  my-4 ">
   <div class="row justify-content-between ">
     <!-- item-1 -->
-    <div class="card col-sm-12 col-md-5 col-xl-3 gap-5 mx-3 my-2 ">
+    <div class="card col-sm-12 col-md-6 col-xl-4 gap-5  my-2 ">
       <img src="./images/foundation(4).jpeg" class="card-img-top shadow" alt="..." height="300px" style="aspect-ratio: 16/9;">
       <div class="card-body">
         <h5 class="card-title">Boobeen Liquid Foundation  </h5>
@@ -266,7 +266,7 @@
       </div>
     </div>
       <!-- item-2-->
-      <div class="card col-sm-12 col-md-5 col-xl-3 gap-5 mx-3 my-2">
+      <div class="card col-sm-12 col-md-6 col-xl-4 gap-5  my-2">
         <img src="./images/sheglam_.jpg" class="card-img-top shadow" alt="..." height="300px" style="aspect-ratio: 16/9;">
         <div class="card-body">
           <h5 class="card-title">Sheglam  </h5>
@@ -275,7 +275,7 @@
         </div>
       </div>
         <!-- item-3 -->
-    <div class="card col-sm-12 col-md-5 col-xl-3 gap-5 mx-3 my-2">
+    <div class="card col-sm-12 col-md-6 col-xl-4 gap-5  my-2">
       <img src="./images/essecce_.jpg" class="card-img-top shadow" alt="..." height="300px" style="aspect-ratio: 16/9;">
       <div class="card-body">
         <h5 class="card-title">Essence  </h5>
@@ -284,7 +284,7 @@
       </div>
     </div>
       <!-- item-4 -->
-      <div class="card col-sm-12 col-md-5 col-xl-3 gap-5 mx-3 my-2">
+      <div class="card col-sm-12 col-md-6 col-xl-4 gap-5  my-2">
         <img src="./images/eye shadow_.jpg" class="card-img-top shadow" alt="..." height="300px" style="aspect-ratio: 16/9;">
         <div class="card-body">
           <h5 class="card-title">Eyeshadow  <br>Palette </h5>
@@ -293,7 +293,7 @@
         </div>
       </div>
         <!-- item-5 -->
-    <div class="card col-sm-12 col-md-5 col-xl-3 gap-5 mx-3 my-2">
+    <div class="card col-sm-12 col-md-6 col-xl-4 gap-5  my-2">
       <img src="./images/Cybele Smooth_.jpg" class="card-img-top shadow" alt="..." height="300px" style="aspect-ratio: 16/9;">
       <div class="card-body">
         <h5 class="card-title">Cybele <br>Smooth </h5>
@@ -302,7 +302,7 @@
       </div>
     </div>
       <!-- item-6 -->
-      <div class="card col-sm-12 col-md-5 col-xl-3 gap-5 mx-3  my-2">
+      <div class="card col-sm-12 col-md-6 col-xl-4 gap-5   my-2">
         <img src="./images/Sheglam BAKED_.jpg" class="card-img-top shadow" alt="..." height="300px" style="aspect-ratio: 16/9;">
         <div class="card-body">
           <h5 class="card-title">Sheglam <br>BAKED</h5>
@@ -311,21 +311,24 @@
         </div>
       </div>
         <!-- item-7 -->
-    <div class="card col-sm-12 col-md-5 col-xl-3  gap-5  my-2" style="margin-left: 155px;">
-      <img src="./images/Benefit Benetin_.jpg" class="card-img-top shadow" alt="..." height="300px" style="aspect-ratio: 16/9;">
-      <div class="card-body">
-        <h5 class="card-title">Benefit <br> Benetin</h5>
-        <p class="card-text"> Benefit Benetint Lip & Cheek Stain, 6Ml, Pink.</p>
-        <a href="#" class="btn btn-primary">BUY NOW</a>
-      </div>
-    </div>
-    <div class="card col-sm-12 col-md-5 col-xl-3 gap-5  my-2 " style="margin-right: 155px;">
-      <img src="./images/e.l.f. Power Grip Primer_.jpg" class="card-img-top shadow" alt="..." height="300px" style="aspect-ratio: 16/9;">
-      <div class="card-body">
-        <h5 class="card-title">e.l.f. Power <br>Grip Primer </h5>
-        <p class="card-text"> e.l.f. Power Grip Primer, Gel-Based & Hydrating Face Primer For Smoothing Skin & Gripping Makeup, Moisturizes & Primes, 0.811 Fl Oz (24 ml).</p>
-        <a href="#" class="btn btn-primary">BUY NOW</a>
-      </div>
+         <div class="row justify-content-around ">
+          <div class="card col-sm-12 col-md-5 col-xl-6    my-2" >
+            <img src="./images/Benefit Benetin_.jpg" class="card-img-top shadow" alt="..." height="300px" style="aspect-ratio: 16/9;">
+            <div class="card-body">
+              <h5 class="card-title">Benefit <br> Benetin</h5>
+              <p class="card-text"> Benefit Benetint Lip & Cheek Stain, 6Ml, Pink.</p>
+              <a href="#" class="btn btn-primary">BUY NOW</a>
+            </div>
+          </div>
+          <div class="card col-sm-12 col-md-5 col-xl-6  my-2 " >
+            <img src="./images/e.l.f. Power Grip Primer_.jpg" class="card-img-top shadow" alt="..." height="300px" style="aspect-ratio: 16/9;">
+            <div class="card-body">
+              <h5 class="card-title">e.l.f. Power <br>Grip Primer </h5>
+              <p class="card-text"> e.l.f. Power Grip Primer, Gel-Based & Hydrating Face Primer For Smoothing Skin & Gripping Makeup, Moisturizes & Primes, 0.811 Fl Oz (24 ml).</p>
+              <a href="#" class="btn btn-primary">BUY NOW</a>
+            </div>
+         </div>
+ 
     </div>
     </div>
    </div>
@@ -340,7 +343,7 @@
   <div class="container-lg mt-5">     
     <div class="row members">
       <!-- card-1 -->
-      <div class="col-md-6 col-lg-4 mb-2">
+      <div class="col-md-12 col-lg-4 mb-2">
         <div class="card text-light thx-card shadow-lg card-img-1">
           <div class="card-img-overlay d-flex flex-column">
             <div class="upper-content text-start ">
